# libpisces

./: .gitignore  CMakeLists.txt
accounts/: CMakeLists.txt  qmldir
audio/: CMakeLists.txt  context.cpp  debug.cpp
audio/qml/: PulseObjectFilterModel.qml  plugin.cpp  qmldir
bluez/: CMakeLists.txt  DevicesModel.qml  bluezqtextensionplugin.cpp  bluezqtextensionplugin.h  qmldir
bluez/applet/: bluetoothmanager.cpp  bluetoothmanager.h
debian/: changelog  control  copyright
mpris/: CMakeLists.txt  qmldir
networkmanagement/: CMakeLists.txt  activeconnection.cpp  activeconnection.h  appletproxymodel.cpp  appletproxymodel.h  configuration.cpp  networkmodel.cpp  qmldir
screen/: CMakeLists.txt  qmldir
system/: CMakeLists.txt  qmldir  wallpaper.cpp
